--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-gesture-handler": "^2.2.0",
-    "react-native-gifted-charts": "^1.0.3",
+    "react-native-gifted-charts": "^1.0.5",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.11.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.1",
     "react-native-three-dots-loader": "^1.0.1",
     "react-native-vector-icons": "^9.1.0",
     "validator": "^13.7.0"
