--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@react-navigation/native-stack": "^6.5.0",
     "axios": "^0.26.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.67.2",
-    "react-native-gesture-handler": "^2.2.0",
+    "react-native-date-picker": "^4.2.0",
+    "react-native-gesture-handler": "^2.1.1",
     "react-native-gifted-charts": "^1.0.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.4.1",
